cli/tests/testdata/event_listener_error_handled.ts.out
1
{
  cancelable: true,
  message: "Uncaught Error: bar",
  filename: "[WILDCARD]/event_listener_error_handled.ts",
  lineno: 14,
  colno: 9,
  error: Error: bar
    at [WILDCARD]/event_listener_error_handled.ts:14:9
    at [WILDCARD]
    at [WILDCARD]/event_listener_error_handled.ts:18:1
}
2
